# Rust-Web-OSINT-Scraper

./: .gitignore  Cargo.toml  README.md
src/: main.rs  scanner.rs
