[package]
name = "rust-web-osint-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.47.1", features = ["full"]}
reqwest = {version = "0.12.23", features = ["default", "rustls-tls", "blocking"]}
scraper = {version = "0.24.0", features = ["default"]}
serde = {version = "1.0.219", features = ["default", "std"]}
json = "0.12.4"
serde_json = {version = "1.0.143", features = ["default", "alloc", "std"]}
url = "2.5.4"
select = "0.6.1"
robots_txt = "0.7.0"
csv = "1.3.1"
lru = "0.16.0"
curl = "0.4.49"
regex = "1.11.1"
indicatif = "0.18.0"
clap = { version = "4.5.45", features = ["derive"] }